--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://brianadamsmaino68:8I0xlOtJuRFrAw4v@cluster0.jgykhrl.mongodb.net/"
+DATABASE_URL="mongodb+srv://brianadamsmaino68:8I0xlOtJuRFrAw4v@cluster0.jgykhrl.mongodb.net/<mydb>?retryWrites=true&w=majority"
