--- a/.env
+++ b/.env
@@ -4,11 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://brianadamsmaino68:8I0xlOtJuRFrAw4v@cluster0.jgykhrl.mongodb.net/<mydb>?retryWrites=true&w=majority"
-NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+DATABASE_URL=
+NEXTAUTH_SECRET=
 
-GITHUB_ID=39a5c1a1f766bfdd999a
-GITHUB_SECRET=95e6cadf3d337a5c5a705e1eaa2863014261c975
+GITHUB_ID=
+GITHUB_SECRET=
 
-GOOGLE_CLIENT_ID=324465760599-ug1vidhu48kni8taul7gh6tl7pq5es6j.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
